<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:title="@string/auth_title"
      android:background="@color/primary"
      app:titleTextColor="@color/onPrimary"/>

  <!-- Cabecera centrada -->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingTop="20dp"
      android:orientation="vertical"
      tools:ignore="ExtraText">





    <TextView
        android:text="@string/auth_welcome_title"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/onBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/auth_welcome_sub"
        android:textColor="#6B7280"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
  </LinearLayout>

  <!-- Toggle Login / Registro -->
  <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/toggleAuth"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="8dp"
      app:singleSelection="true"
      app:selectionRequired="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoginTab"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/auth_login_tab"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterTab"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/auth_register_tab"/>
  </com.google.android.material.button.MaterialButtonToggleGroup>

  <!-- Contenedor -->
  <androidx.fragment.app.FragmentContainerView
      android:id="@+id/auth_container"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"/>
</LinearLayout>
